// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hs upload --help 1`] = `
"Usage: hs upload [options] <src> <dest>

Upload a folder or file from your computer to the HubSpot CMS

Options:
  -V, --version      output the version number
  --config <config>  path to a config file
  --portal <portal>  HubSpot portal id or name from config
  --debug            set log level to debug
  --mode <mode>      write to <draft | publish>
  -h, --help         output usage information"
`;

exports[`hscms upload --help 1`] = `
"Usage: hscms upload [options] <src> <dest>

Upload a folder or file from your computer to the HubSpot CMS

Options:
  -V, --version      output the version number
  --config <config>  path to a config file
  --portal <portal>  HubSpot portal id or name from config
  --debug            set log level to debug
  --mode <mode>      write to <draft | publish>
  -h, --help         output usage information"
`;
